Improving the crafting UI

--- a/blacksmith_simulator.html
+++ b/blacksmith_simulator.html
@@ -11,6 +11,9 @@
 
     <div class="game">
         <div style="border: none;">
+            <div class="game-currency"></div>
+        </div>
+        <div style="border: none;">
             <div class="vertical-column" style="width: 300px;">
                 <div class="title">Inventory</div>
                 <div class="game-inventory"></div>
