Hooking up the sleep button

--- a/blacksmith_simulator.html
+++ b/blacksmith_simulator.html
@@ -11,7 +11,7 @@
 
     <div class="game">
         <div style="border: none;">
-            <span class="game-sleep">Next Day</span>
+            <span class="game-sleep" onclick="sleep();">Next Day</span>
             <span class="game-currency"></span>
         </div>
         <div style="border: none;">
@@ -31,6 +31,9 @@
                 <div class="title">Queue</div>
                 <div class="game-recipe-queue"></div>
             </div>
+        </div>
+        <div style="border: none;">
+            <span class="game-sleep" onclick="sleep();">Next Day</span>
         </div>
     </div>
 
